--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -652,7 +652,111 @@
 
     <!-- FOOTER STARTS -->
 
+    <div id="hub-footer-cont">
+        <div class="hub-footer-left">
+            <div>
+                <div class="footer-left-1" id="footer-content">
+                    <p id="footer-left-head">Popular Features</p>
+                    <a href="#">Free Meeting Scheduler App</a>
+                    <a href="#">Social Media Tools</a>
+                    <a href="#">Email Tracking Software</a>
+                    <a href="#">Sales Email Automation</a>
+                    <a href="#">Ads Software</a>
+                    <a href="#">Email Marketing Software</a>
+                    <a href="#">Lead Management Software</a>
+                    <a href="#">Pipeline Management Tools</a>
+                </div>
 
+            </div>
+            <div>
+                <div class="footer-left-2" id="footer-content">
+                    <a href="#">Sales Email Templates</a>
+                    <a href="#">Help Desk Software</a>
+                    <a href="#">Free Online Form Builder</a>
+                    <a href="#">Free Chatbot Builder</a>
+                    <a href="#">Free Live Chat Software</a>
+                    <a href="#">Marketing Analytics</a>
+                    <a href="#">Free Landing Page Builder</a>
+                    <a href="#">PieSync Integrations</a>
+                </div>
+            </div>
+
+        </div>
+        <hr style="color: #CBD6E2; width: .5px; height: 55vh; margin-right: 30px;" />
+
+        <div class="hub-footer-right">
+            <div>
+
+                <div class="footer-right-1" id="footer-content">
+                    <p id="footer-right-head-1">Free Tools</p>
+                    <a href="#">Website Grader</a><br />
+                    <a href="#">Make My Persona</a><br />
+                    <a href="#">Email Signature Generator</a><br />
+                    <a href="#">Blog Ideas Generator</a><br />
+                    <a href="#">Invoice Template Generator</a><br />
+                    <a href="#">Marketing Plan Generator</a><br />
+                    <a href="#">Free Business Templates</a><br />
+                    <a href="#">Industry Benchmark Data</a><br />
+                    <a href="#">Software Comparisons Library</a><br />
+                </div>
+            </div>
+            <div>
+
+                <div class="footer-right-2" id="footer-content">
+                    <p id="footer-right-head-2">Company</p>
+                    <a href="#">About Us</a><br />
+                    <a href="#">Careers</a><br />
+                    <a href="#">Management Team</a><br />
+                    <a href="#">Board of Directors</a><br />
+                    <a href="#">Investor Relations</a><br />
+                    <a href="#">Blog</a><br />
+                    <a href="#">Contact Us</a>
+                </div>
+            </div>
+            <div>
+
+                <div class="footer-right-3" id="footer-content">
+                    <p id="footer-right-head-3">Customers</p>
+                    <a href="#">Customer Support</a>
+                    <a href="#">Join a Local User Group</a>
+                </div>
+
+                <div class="footer-right-3" id="footer-content">
+                    <p id="footer-right-head-3">Partners</p>
+                    <a href="#">All Partner Programs</a>
+                    <a href="#">Solutions Partner Program</a>
+                    <a href="#">App Partner Program</a>
+                    <a href="#">HubSpot for Startups</a>
+                    <a href="#">Affiliate Program</a>
+                </div>
+
+
+            </div>
+
+
+        </div>
+    </div>
+    <div class="footer-icons">
+        <hr style="color: #CBD6E2; width: 30%; height: .5px; margin-right: 0;" />
+        <div class="all-the-icons">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-medium-m"></i>
+        </div>
+        <hr style="color: #CBD6E2; width: 30%; height: .5px; margin-left: 0;" />
+    </div>
+    <div class="footer-last">
+        <img src="https://www.hubspot.com/hubfs/WBZ-1165%20Global%20Nav%20Redesign/Wordmark-White.svg" />
+        <p>Copyright © 2021 HubSpot, Inc.</p>
+        <div>
+            <a href="#">Legal Stuff</a>
+
+            <a href="#">Privacy Policy</a>
+        </div>
+    </div>
 
 
     <!-- FOOTER ENDS -->
@@ -661,7 +765,7 @@
     <script>
         var showMenu = true;
         var getStarted = document.querySelector(".get-started");
-        getStarted.style.marginTop = "120px";
+
         function toggleMenu() {
             var menu = document.getElementById("small-menu");
             if (showMenu) {
