Footer part added to investor relations page and photoAnimations pending on managementTeam

--- a/investorRelations/index.html
+++ b/investorRelations/index.html
@@ -20,6 +20,7 @@
             </div>
         </div>
         <div id = 'contentDisplay'></div>
+        <div footer-include-html = 'footer.html'></div>
         <script type = "module" src = "investors.js"></script>
     </body>
 </html>
