--- a/footer.html
+++ b/footer.html
@@ -167,6 +167,10 @@
      {
          color: #3b5;
      }
+     a:hover .fa-linkedin
+     {
+         color: rgba(53, 9, 50, 0.6);
+     }
 
 
 
@@ -266,10 +270,11 @@
         <div id="footer-social">
              <div class="social">
                 <!-- i stands for icon -->
-                 <a href="facebook.com"><i class="fab fa-facebook"> </i></a> 
-                 <a href="twitter.com"><i class="fab fa-twitter"> </i></a> 
-                 <a href="instagram.com"><i class="fab fa-instagram"> </i></a> 
-                 <a href="https://youtube.com"><i class="fab fa-youtube"> </i></a>  
+                 <a href="https://facebook.com"><i class="fab fa-facebook"> </i></a> 
+                 <a href="https://twitter.com"><i class="fab fa-twitter"> </i></a> 
+                 <a href="https://instagram.com"><i class="fab fa-instagram"> </i></a> 
+                 <a href="https://youtube.com"><i class="fab fa-youtube"> </i></a>
+                 <a href="https://linkedin.com"><i class="fab fa-linkedin"> </i></a>  
 
              </div><br><br/>
 
