Except header all other parts are summarised, a bit of bug exists in the animations

--- a/managementTeam/index.html
+++ b/managementTeam/index.html
@@ -6,6 +6,7 @@
         <link data-n-head="true" rel="shortcut icon" type="image/x-icon"
         href="https://ir.hubspot.com/hubfs/HubSpot_Logos/HubSpot-Inversed-Favicon.png">
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <style></style>
     </head>
     <body>
@@ -19,15 +20,17 @@
                 </div>
             </div>
             <div id = 'contentDisplay'></div>
+            
             <div id = 'subFooter'>
                 <div>
                 <h3 style = "font-size: 23px; font-weight: bolder;">What's Happening at HubSpot</h3>
                 <p style = "font-size: 20px;">Curious about recent developments at HubSpot? Check out the latest announcements, news coverage, awards, 
                     and more in HubSpot’s Newsroom. Or, subscribe to our Company News Blog to stay forever up-to-date.</p>
-                <div>
-            </div>
-            <button id="orangeButton" onclick = "window.location.href = 'https://www.hubspot.com/newsroom'">Visit the HubSpot Newsroom</button>
+                </div>
+                <button id="orangeButton" onclick = "window.location.href = 'https://www.hubspot.com/newsroom'">Visit the HubSpot Newsroom</button>
             <button id = "orangeBorderButton" onclick = "window.location.href = 'https://www.hubspot.com/company-news'">Visit the Company News Blog</button>
+            </div>
+            <div footer-include-html = 'footer.html'></div>
         <script type = "module" src = "management.js"></script>
     </body>
 </html>
