--- a/login_page/signup_success.html
+++ b/login_page/signup_success.html
@@ -12,12 +12,6 @@
             box-sizing: border-box;
             font-family: Avenir Next W02, Helvetica, Arial, sans-serif;
         }
-        html,
-        body {
-            background: rgb(2,0,36);
-            background: linear-gradient(90deg, rgb(156, 68, 179) 0%, rgb(103, 202, 124) 35%, rgb(209, 207, 112) 100%);
-            height: 100%;
-        }
         p{
             color: #33475b;
             background-color: #eaf0f6;
@@ -35,6 +29,9 @@
         font-weight: 550;
         text-decoration: none;
         margin-left: 680px;
+        }
+        a:hover{
+            opacity: 0.6;
         }
     </style>
 </head>
