--- a/login_page/login_success.html
+++ b/login_page/login_success.html
@@ -14,13 +14,12 @@
         }
         html,
         body {
-            background: rgb(2,0,36);
-            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
             height: 100%;
         }
         p{
             color: #33475b;
             background-color: #eaf0f6;
+            border-radius: 10px;
             text-align: center;
             font-size: 20px;
             height: 26px;
@@ -28,9 +27,20 @@
             margin: auto;
             margin-top: 150px;
         }
+        a{
+            text-decoration: none;
+            font-size: 20px;
+            color:#0091ae;
+            line-height: 100px;
+            margin-left: 650px;
+        }
+        a:hover{
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <p>Login Successful !!!</p>
+    <a href="dashboard.html">Click Here for Dashboard</a>
 </body>
 </html>
