--- a/login_page/login_unsuccess.html
+++ b/login_page/login_unsuccess.html
@@ -12,12 +12,6 @@
             box-sizing: border-box;
             font-family: Avenir Next W02, Helvetica, Arial, sans-serif;
         }
-        html,
-        body {
-            background: rgb(2,0,36);
-            background: linear-gradient(90deg, rgb(70, 70, 70) 0%, rgb(160, 4, 4) 35%, rgb(66, 63, 61) 100%);
-            height: 100%;
-        }
         p{
             color: #33475b;
             background-color: #eaf0f6;
@@ -28,10 +22,25 @@
             margin: auto;
             margin-top: 150px;
         }
+        a{
+            text-decoration: none;
+            font-size: 20px;
+            color:#0091ae;
+            margin-left: 720px;
+        }
+        a:hover{
+            text-decoration: underline;
+        }
+        h5{
+            text-align: center;
+            line-height: 50px;
+        }
     </style>
 </head>
 <body>
     <p>Invalid Credentials</p>
-    
+    <h5>Don't Have an account ?</h5>
+
+    <a href="signup.html">SignUp</a>
 </body>
 </html>
