small comments in index

--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -67,6 +67,7 @@
 
             <!-- software-nav -->
 
+            <!-- Here I have to connect all the pages  -->
 
             <div id="aboutUs-option-nav" class="bout-nav" style="display: none">
 
@@ -81,7 +82,7 @@
                 <div>
                     <div class="aboutUs-option-1-2-inside">
 
-                        <a href="Careers.html" class="soft-nav-links"><span>Careers</span>
+                        <a href="#" class="soft-nav-links"><span>Careers</span>
                         </a>
                     </div>
                 </div>
@@ -89,7 +90,7 @@
                 <div>
                     <div class="aboutUs-option-1-2-inside">
 
-                        <a href="ContactUs.html" class="soft-nav-links"><span>Contact Us</span>
+                        <a href="#" class="soft-nav-links"><span>Contact Us</span>
                         </a>
                     </div>
                 </div>
@@ -97,7 +98,7 @@
                 <div>
                     <div class="aboutUs-option-1-2-inside">
 
-                        <a href="" class="soft-nav-links"><span>Investor Relations</span>
+                        <a href="#" class="soft-nav-links"><span>Investor Relations</span>
                         </a>
                     </div>
                 </div>
@@ -105,7 +106,7 @@
                 <div>
                     <div class="aboutUs-option-1-2-inside">
 
-                        <a href="" class="soft-nav-links"><span>Management Team</span>
+                        <a href="#" class="soft-nav-links"><span>Management Team</span>
                         </a>
                     </div>
                 </div>
