Added a header dummy

--- a/investorRelations/index.html
+++ b/investorRelations/index.html
@@ -8,7 +8,7 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     </head>
     <body>
-        <div id = 'navbar'>This space is specially dedicated for NAVBAR</div>
+        <div id = 'navbar'></div>
         <div id = 'titleDisplay'></div>
         <div id = 'minorNavBar'>
             <div>
