--- a/managementTeam/index.html
+++ b/managementTeam/index.html
@@ -10,7 +10,7 @@
         <style></style>
     </head>
     <body>
-        <div id = 'navbar'>This space is specially dedicated for NAVBAR</div>
+        <div  id = 'navbar'></div>
         <div id = 'titleDisplay'></div>
         <div id = 'minorNavBar'>
             <div>
