--- a/Careers.html
+++ b/Careers.html
@@ -7,12 +7,32 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="shortcut icon" href="#" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Careers</title>
 
     <style type="text/css">
+
+     #header
+       {
+          position: fixed;
+          margin-top: -10px;
+          float: left;
+       }
+
+
+
+
     #top
     {
         background-color: #425b76;
+        margin-top: 10px;
         width: 100%;
         text-align: center;
         float: left;
@@ -523,18 +543,17 @@
 
    
 
-
-
-    
-  
-   
-
-
-
-
     </style>
 </head>
 <body>
+
+
+
+    <div id="header">
+        <img src="./images/contact/header.png" width="100%"/>
+    </div> 
+
+
     
     <nav id="top">
         <p id="l">
