--- a/ContactUs.html
+++ b/ContactUs.html
@@ -7,6 +7,21 @@
     <title>Contact</title>
 
     <style type="text/css">
+
+       #header
+       {
+          position: fixed;
+          margin-top: -10px;
+          float: left;
+       }
+
+       #one
+       {
+           margin-top: 50px;
+           float: left;
+       }
+
+
         #two
         {
             margin: auto;
@@ -401,7 +416,10 @@
     </style>
 </head>
 <body>
-    
+
+<div id="header">
+        <img src="./images/contact/header.png" width="100%"/>
+</div>   
 <div id="one">
     <img src="./images/contact/contact1.png" width="100%"/>
 </div><br></br>
